Fix distorting image on navbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,6 +99,7 @@ input[name="myImage"] {
   height: 40px;
   border-radius: 50%;
   margin: 5px;
+  object-fit: cover;
 }
 
 .header_button_logo {
